<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFixed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageViewSeal"
        android:contentDescription="@string/msu_iit_logo"
        android:layout_width="290dp"
        android:layout_height="249dp"
        android:alpha="0.1"
        app:layout_constraintBottom_toBottomOf="@+id/viewDeck2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/seal_02" />

    <View
        android:id="@+id/viewDeck1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"> </View>

    <TextView
        android:id="@+id/tvSignInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/sign_in"
        android:textSize="28sp"
        android:textColor="?android:textColorPrimary"
        android:fontFamily="@font/archivo_bold"
        app:layout_constraintBottom_toBottomOf="@+id/viewDeck1"
        app:layout_constraintStart_toStartOf="@+id/viewDeck1"
        app:layout_constraintTop_toTopOf="@+id/viewDeck1" />

    <View
        android:id="@+id/viewDeck2"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDeck1"> </View>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/text_input"
        android:hint="@string/enter_your_username"
        android:fontFamily="@font/archivo_regular"
        android:inputType="text"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDeck1"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/text_input"
        android:hint="@string/enter_your_password"
        android:fontFamily="@font/archivo_regular"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/viewDeck2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/viewDeck3"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDeck2"> </View>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bttnContinue"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_gold"
        android:text="Continue"
        android:textSize="15sp"
        android:textColor="#FF000000"
        android:fontFamily="@font/archivo_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewDeck3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or"
        android:textSize="15sp"
        android:fontFamily="@font/archivo_semibold"
        app:layout_constraintBottom_toTopOf="@+id/bttnMyIIT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnContinue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bttnMyIIT"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_red"
        android:text="Continue with myIIT"
        android:textSize="15sp"
        android:textColor="#FFFFFFFF"
        android:fontFamily="@font/archivo_semibold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnContinue" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_myiit_account_yet_sign_up"
        android:textSize="15sp"
        android:textColor="#09101D"
        android:fontFamily="@font/archivo_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnContinue" />

    <View
        android:id="@+id/viewFader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/near_black"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/lesser_white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>